--- a/html/test.html
+++ b/html/test.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <p>첫번째 커밋 테스트</p>
+    <p>두번째 커밋 테스트 (newBranch1 브랜치에서 생성)</p>
+    <p>세번째 커밋 테스트 (newBranch1 브랜치에서 2번째 생성)</p>
 </body>
 </html>
